# draftsmith_rs_api

./: .env  .gitignore  Cargo.toml  README.md  This allows the new command syntax  diesel.toml  justfile  note_modifications.rs
migrations/2024-10-31-024911_create_notes/: down.sql  up.sql
migrations/2024-10-31-041019_create_assets/: down.sql  up.sql
migrations/2024-10-31-043240_create_tasks/: down.sql  up.sql
migrations/2024-10-31-043821_create_initial_data/: down.sql  up.sql
migrations_working/2024-11-04-041235_pgvector/: down.sql  will_be_up_later.sql
python_client/: README.md  main.py  test_main.py
python_client/tests/: test_main.py
resources/: draftsmith.sql  test_endpoint.py
resources/containers/ollama/ollama/: docker-compose.yml
resources/containers/ollama/webui/: docker-compose.yml
resources/containers/postgres/metabase/: docker-compose.yml
resources/containers/postgres/pgadmin/: docker-compose.yml
resources/containers/postgres/postgres/: docker-compose.yml
src/: api.rs  assets.rs  attributes.rs  client.rs  journal_entries.rs  lib.rs  note_attributes.rs  note_hierarchy.rs  note_modifications.rs  note_tags.rs  note_type_mappings.rs  note_types.rs  notes.rs  schema.rs  tables.rs  tags.rs
src/api/: custom_rhai_functions.rs  generics.rs  hierarchy.rs  mod.rs  state.rs  tags.rs  tasks.rs  tests.rs
src/api/hierarchy/: generics.rs  mod.rs  notes.rs  tags.rs  tasks.rs
src/client/: assets.rs  mod.rs  notes.rs  tags.rs  tasks.rs
tests/: api.rs
