[package]
name = "rust-cli-app"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.4", features = ["chrono", "postgres"] }
dotenv = "0.15.0"
tracing-subscriber = "0.3.18"

[dependencies.clap]
version = "4.5.20"
features = ["derive"]

