[package]
name = "rust-cli-app"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.4", features = ["chrono", "postgres", "numeric", "r2d2"] }
dotenv = "0.15.0"
tracing-subscriber = "0.3.18"
bigdecimal = { version = "0.4.2", features = ["serde"] }
axum = "0.7.7"
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tower = "0.5.1"
axum-test = "16.3.0"
serde_json = "1.0.132"
reqwest = { version = "0.11", features = ["json"] }

[dependencies.clap]
version = "4.5.20"
features = ["derive"]

